--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-material",
-  "description": "GatsbyJS Material Blog theme.",
+  "name": "einck-notes",
+  "description": "Website for displaying my computer sciense knowledge",
   "version": "2.0.0",
-  "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
+  "author": "Dillon Einck",
   "dependencies": {
     "font-awesome": "^4.7.0",
     "gatsby": "^2.4.3",
